--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
+    "lambda-rate-limiter": "^3.0.1",
     "nodemailer": "^6.6.3"
   }
 }
